src/main/resources/static/style.css
h2 {
    color: #A2251F;
}

.backdrop {
    width: auto;
    height: 95vh;
    background: #93262B;
    border-radius: 5px;
}

.border {
    margin-left: 10vw;
    margin-right: 10vw;
    background: #35322F;
    padding-top: 16px;
    padding-bottom: 32px;
    box-shadow: 0 4px 4px 0;
}

.surface {
    background: white;
    padding: 16px;
}

.interface {
    background: #E6ECEF;
    padding: 4px 8px;
    border-radius: 4px;
    border: thin #CEDCE2;
}

table {
  width: 100%;
    border-collapse: collapse;
}

th {
    background: #D8D8D8;
    border: #B3B2B3 2px solid;
    text-align: left;
}

td {
    border: #B3B2B3 2px solid;
    padding: 2px 4px;
}

input[type="number"] {
    width: 64px;
}

.button-holder {
    display: flex;
    justify-content: right;
}

.button-holder input {
    background: #A2251F;
    color: white;
    border: white 2px solid;
    border-radius: 4px;
    padding: 8px;
    margin: 4px;
}

